--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
     <title>826CHI 2016 Annual Report</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
@@ -25,8 +32,8 @@
       <div class='menu-list' onclick=''>
         <button id='menu'><h2>CONTENTS</h2><img id='chevron' src='images/chevron.svg'><img id='menu-icon'src='images/icons/menu.svg'></button>
         <ol class='hide' id='menu-items'>
-          <li><div><a href="#current-staff"><h2>Current Staff</h2></a></div></li>
           <li><div><a href="#execletter"><h2>Letter by Director</h2></a></div></li>
+          <li><div><a href="#current-staff"><h2>Current Staff</h2></a></div></li>
           <li><div><a href="#mission"><h2>Mission Statement</h2></a></div></li>
           <li><div><a href="#at-a-glance"><h2>At A Glance</h2></a></div></li>
           <li><div><a href="#updates"><h2>Updates</h2></a></div></li>
@@ -39,13 +46,13 @@
       </div>
     </nav>
     <div id='header-wrap'>
-      <img id='map' src='images/map.png'>
       <div class="page-header">
         <img src='images/826-logo.svg'>
-        <h1 class="page-title">Annual Report</h1>
-        <h2>FOR YEAR 2016</h2>
+        <h1 class="page-title">Annual<br>Report</h1>
+        <p>FOR YEAR 2016</p>
       </div>
       <div id='map-key'><img src='https://cl.ly/342l1q0X1w2b/mappin.png'><p class='smallcaps'>AN 826 SCHOOL</p></div>
+      <img id='map' src='images/map.png'>
     </div>
 
     <main>
@@ -274,7 +281,7 @@
           <p class='smallcaps'>OF STUDENTS REPORTED FEELING PROUD OF THEIR WRITING AT THE END OF THE PROJECT</p>
         </div>
         <img class='section-header-img' src='images/inschools.png'>
-       	<p class='italic'>Every school year, 826CHI partners with teachers in local high-need schools around Chicago to provide individualized assistance to students as they tackle various writing projects. During the 2015-2016 school year, we sent 254 volunteers to five Chicago Public Schools for a total of 71 in-school sessions.  Projects ranged from revising AP World History essays to writing stories about power and place.  Four schools—Curie Metropolitan High School, Bowen High School, Wells Community Academy High School, and Brentano Elementary Math &amp; Science Academy—created publications during in-schools.  Our annual Young Authors Book Project, <i>The Monster Gasped, OMG!</i>, with Brentano Elementary culminated with a public reading at Printers Row Lit Fest.</p>
+       	<p>Every school year, 826CHI partners with teachers in local high-need schools around Chicago to provide individualized assistance to students as they tackle various writing projects. During the 2015-2016 school year, we sent 254 volunteers to five Chicago Public Schools for a total of 71 in-school sessions.  Projects ranged from revising AP World History essays to writing stories about power and place.  Four schools—Curie Metropolitan High School, Bowen High School, Wells Community Academy High School, and Brentano Elementary Math &amp; Science Academy—created publications during in-schools.  Our annual Young Authors Book Project, <i>The Monster Gasped, OMG!</i>, with Brentano Elementary culminated with a public reading at Printers Row Lit Fest.</p>
 
 
         <div class='block-wrap'>
@@ -1451,15 +1458,15 @@
       <img id='donate' src='images/donate.png'>
       <div>
         <h1>Until next year!</h1>
-        <a href=''><h2>DONATE</h2></a>
-        <a href=''><h2>VOLUNTEER</h2></a>
+        <a href='http://www.826chi.org/donate/'><h2>DONATE</h2></a>
+        <a href='http://www.826chi.org/get_involved/volunteer/'><h2>VOLUNTEER</h2></a>
       </div>
     </div>
     <footer>
       <div id='contact'>
         <img width='28px' id='footer-symbol' src='images/826-symbol.svg'>
-        <h2>CONTACT US</h2><br>
-        <p class='smallcaps'>QUESTIONS? <span>EMAIL <a href="mailto:development@826chi.org">DEVELOPMENT@826CHI.ORG</a></span></p>
+        <h2>CONTACT US<br>QUESTIONS? EMAIL <a href="mailto:info@826chi.org">INFO@826CHI.ORG</a></h2><!-- <br> -->
+        <!-- <p class='smallcaps'>QUESTIONS? <span>EMAIL <a href="mailto:info@826chi.org">INFO@826CHI.ORG</a></span></p> -->
       </div>
     </footer>
         
