--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class='floated-pair'>
    			<p class='pair-left'>And while 826CHI was maturing, the city and country around us was thrust into crisis - from the Illinois state budget impasse and teacher layoffs to tragedies in Charleston, Orlando, and San Bernadino. With the loss of Laquan McDonald just blocks from long-time partner school Curie Metropolitan, our community reinforced the role of 826CHI’s mission at moments of adversity.</p>
         <div id='yerika' class='blockquote'>
-          <blockquote class='h2'>"I want allies to listen. I want marginalized students of color to see themselves in all creative arts. [&hellip;] Sharing is scary, but it also connects you with others. Don’t be afraid to erase and start over."</blockquote>
+          <blockquote class='h2'>“I want allies to listen. I want marginalized students of color to see themselves in all creative arts. [&hellip;] Sharing is scary, but it also connects you with others. Don’t be afraid to erase and start over.”</blockquote>
           <cite class='smallcaps'>– YERIKA, STUDENT</cite>
         </div>
         <p class='pair-left--mobile'>And while 826CHI was maturing, the city and country around us was thrust into crisis - from the Illinois state budget impasse and teacher layoffs to tragedies in Charleston, Orlando, and San Bernadino. With the loss of Laquan McDonald just blocks from long-time partner school Curie Metropolitan, our community reinforced the role of 826CHI’s mission at moments of adversity.</p>
@@ -229,13 +229,13 @@
         </div>
         <div class='block block-2 block--quotes'>
           <div class='block__content'>
-            <blockquote class='h2'>"The tutor helped me become a better writer and it made me want to write books when I get older."</blockquote>
+            <blockquote class='h2'>“The tutor helped me become a better writer and it made me want to write books when I get older.”</blockquote>
             <p><cite class='smallcaps'>– STUDENT<br>HARVARD SCHOOL OF EXCELLENCE</cite></p>
           </div>
         </div>
         <div class='block block-2 block--quotes'>
           <div class='block__content'>
-            <blockquote class='h2'>"I love that she has the practice to read and write here because she would be very reluctant to do it at home with me."</blockquote>
+            <blockquote class='h2'>“I love that she has the practice to read and write here because she would be very reluctant to do it at home with me.”</blockquote>
             <p><cite  class='smallcaps'>– TERESA O., PARENT</cite></p>
           </div>
         </div>
@@ -266,10 +266,10 @@
         </div>
 
         <div class='block block-2 block--quotes'>
-          <div class='block__content'><blockquote class='h2'>"I'm very excited that I learned something new. I can write in new ways and think in new ways."</blockquote><p><cite class='smallcaps'>– ARLENE S., STUDENT</cite></p></div>
+          <div class='block__content'><blockquote class='h2'>“I'm very excited that I learned something new. I can write in new ways and think in new ways.”</blockquote><p><cite class='smallcaps'>– ARLENE S., STUDENT</cite></p></div>
         </div>
         <div class='block block-2 block--quotes'>
-          <div class='block__content'><blockquote class='h2'>"I just got the books in the mail!!!  Thank you!!  They turned out awesome! :) The kids love them and one told me how happy their parents were. Can't thank you enough.  I was just getting worked up in a meeting that we needed the kids to love, even like!, writing more by showing them things like your methods!!"</blockquote><p><cite  class='smallcaps'>– JENNY R., TEACHER<br>HIRSCH METROPOLITAN HIGH SCHOOL</cite></p></div>
+          <div class='block__content'><blockquote class='h2'>“I just got the books in the mail!!!  Thank you!!  They turned out awesome! :) The kids love them and one told me how happy their parents were. Can't thank you enough.  I was just getting worked up in a meeting that we needed the kids to love, even like!, writing more by showing them things like your methods!!”</blockquote><p><cite  class='smallcaps'>– JENNY R., TEACHER<br>HIRSCH METROPOLITAN HIGH SCHOOL</cite></p></div>
         </div>
         </div>
       </div> <!-- field trips -->
@@ -298,10 +298,10 @@
             <div class='block__content'><img id='icon-publications' src='images/icons/publications.svg'><p class='no-3'>4</p><p>In-House<br>Publications</p></div>  
           </div>
           <div class='block block-2 block--quotes'>
-            <div class='block__content'><blockquote class='h2'>"What was the most memorable moment with 826CHI is that I get to publish a book with my own words, not with any other people’s words. I had never published a book before, and it’s very exciting."</blockquote><p><cite class='smallcaps'>– BETHSAIDA C., AGE 10</cite></p></div>
+            <div class='block__content'><blockquote class='h2'>“What was the most memorable moment with 826CHI is that I get to publish a book with my own words, not with any other people’s words. I had never published a book before, and it’s very exciting.”</blockquote><p><cite class='smallcaps'>– BETHSAIDA C., AGE 10</cite></p></div>
           </div>
           <div class='block block-2 block--quotes'>
-            <div class='block__content'><blockquote class='h2'>"There is no way that I, alone, would have been able to provide such in-depth feedback for all of my students.  The process also helped students with goal setting and process monitoring.  One of the most important benefits is how the process of working with 826 helped students become more comfortable sharing their work and receiving constructive criticism."</blockquote><p><cite  class='smallcaps'>– JENI C., TEACHER<br>KELVYN PARK HIGH SCHOOL</cite></p></div>
+            <div class='block__content'><blockquote class='h2'>“There is no way that I, alone, would have been able to provide such in-depth feedback for all of my students.  The process also helped students with goal setting and process monitoring.  One of the most important benefits is how the process of working with 826 helped students become more comfortable sharing their work and receiving constructive criticism.”</blockquote><p><cite  class='smallcaps'>– JENI C., TEACHER<br>KELVYN PARK HIGH SCHOOL</cite></p></div>
           </div>
         </div>
 
@@ -334,10 +334,10 @@
             <div class='block__content'><p class='no-3'>6</p><p>In-House<br>Publications</p></div> 
           </div>
           <div class='block block-2 block--quotes'>
-            <div class='block__content'><blockquote class='h2'>"I loved the diverse environment and the instructors were so encouraging, inspiring, patient, and amazing in every way."</blockquote><p><cite  class='smallcaps'>– LAUREN E., STUDENT<br>WHITNEY YOUNG MAGNET HIGH SCHOOL</cite></p></div>
+            <div class='block__content'><blockquote class='h2'>“I loved the diverse environment and the instructors were so encouraging, inspiring, patient, and amazing in every way.”</blockquote><p><cite  class='smallcaps'>– LAUREN E., STUDENT<br>WHITNEY YOUNG MAGNET HIGH SCHOOL</cite></p></div>
           </div>
           <div class='block block-2 block--quotes'>
-            <div class='block__content'><blockquote class='h2'>"I liked that this workshop was very open to ideas and opinions. You were safe to say anything and express any emotions."</blockquote><p><cite class='smallcaps'>– ISABELLA S., STUDENT<br>OGDEN INTERNATIONAL SCHOOL OF CHICAGO</cite></p></div>
+            <div class='block__content'><blockquote class='h2'>“I liked that this workshop was very open to ideas and opinions. You were safe to say anything and express any emotions.”</blockquote><p><cite class='smallcaps'>– ISABELLA S., STUDENT<br>OGDEN INTERNATIONAL SCHOOL OF CHICAGO</cite></p></div>
           </div>
         </div>
 
@@ -354,11 +354,11 @@
       <div id='publishing'>
        	<h3>—<br>Publishing</h3>
         <img class='section-header-img' src='images/publishing.png'>
-       	<p>There is no other organization in Chicago publishing 6 to 18 year-olds’ creative work at the rate that 826CHI is publishing. Last year alone we published 70 books; printing over one-thousand copies so that every student had the chance to take ownership over their hard work. By publishing students’ stories, our young authors become an important part of an artistic dialogue. We work hard to promote the value and impact of our writers’ work. The Chicago Public Library now carries a variety of 826CHI publications in 80 locations across the city. We sell copies of student publications in our revenue-generating storefront, The Wicker Park Secret Agent Supply. Our major publications receive public launch events; solidifying our student voices as an essential part of Chicago’s literary canon. Our most recent YABP publication, <i>The Monster Gasped, "OMG"</i> received extensive press coverage in local news from the Chicago Tribune to the Chicago Reader.</p>
+       	<p>There is no other organization in Chicago publishing 6 to 18 year-olds’ creative work at the rate that 826CHI is publishing. Last year alone we published 70 books; printing over one-thousand copies so that every student had the chance to take ownership over their hard work. By publishing students’ stories, our young authors become an important part of an artistic dialogue. We work hard to promote the value and impact of our writers’ work. The Chicago Public Library now carries a variety of 826CHI publications in 80 locations across the city. We sell copies of student publications in our revenue-generating storefront, The Wicker Park Secret Agent Supply. Our major publications receive public launch events; solidifying our student voices as an essential part of Chicago’s literary canon. Our most recent YABP publication, <i>The Monster Gasped, “OMG”</i> received extensive press coverage in local news from the Chicago Tribune to the Chicago Reader.</p>
 
         <div class='block-wrap mobile'>
           <div class='block block-2 block--quotes'>
-            <div class='block__content'><blockquote class='h2'>"A riveting theme, plus enthusiasm, teamwork and a unique approach to teaching writing combined to make this an experience our students will remember all their lives."</blockquote><p><cite class='smallcaps'>– SETH LAVIN, PRINCIPAL<br>BRENTANO ELEMENTARY SCHOOL</cite></p></div>
+            <div class='block__content'><blockquote class='h2'>“A riveting theme, plus enthusiasm, teamwork and a unique approach to teaching writing combined to make this an experience our students will remember all their lives.”</blockquote><p><cite class='smallcaps'>– SETH LAVIN, PRINCIPAL<br>BRENTANO ELEMENTARY SCHOOL</cite></p></div>
           </div>
         </div>
       </div> <!-- publishing -->
@@ -416,7 +416,7 @@
 
       <div class='block-wrap desktop'>
         <div class='block block-2 block--quotes'>
-          <div class='block__content'><blockquote class='h2'>"A riveting theme, plus enthusiasm, teamwork and a unique approach to teaching writing combined to make this an experience our students will remember all their lives."</blockquote><p><cite class='smallcaps'>– SETH LAVIN, PRINCIPAL<br>BRENTANO ELEMENTARY SCHOOL</cite></p></div>
+          <div class='block__content'><blockquote class='h2'>“A riveting theme, plus enthusiasm, teamwork and a unique approach to teaching writing combined to make this an experience our students will remember all their lives.”</blockquote><p><cite class='smallcaps'>– SETH LAVIN, PRINCIPAL<br>BRENTANO ELEMENTARY SCHOOL</cite></p></div>
         </div>
       </div>
 
@@ -430,7 +430,7 @@
       <img class='section-header-img' src='images/volunteers-3.png'>
       <div class='box'>
         <div class='blockquote'>
-          <blockquote class='h2'>"Much of life for children is being told no. 826CHI is a small space where students are told yes—yes, you can write, yes, you are smart, yes, you can be silly and strange, yes, you can follow your art, yes, you can accomplish anything. That is a space I want to be a part of."</blockquote>
+          <blockquote class='h2'>“Much of life for children is being told no. 826CHI is a small space where students are told yes—yes, you can write, yes, you are smart, yes, you can be silly and strange, yes, you can follow your art, yes, you can accomplish anything. That is a space I want to be a part of.”</blockquote>
           <cite  class='smallcaps'>– BRYCE P., VOLUNTEER VISUAL ARTS COORDINATOR</cite>
         </div>
       </div>
@@ -787,7 +787,7 @@
       <img class='section-header-img' src='images/funders.png'>
       <div class='box'>
         <div class='blockquote'>
-          <blockquote class='h2'>"Creative writing education is more than just teaching composition and storytelling, it's inspiring a student to find their voice. The internal reflection required to develop a personal story, and the self confidence needed to put it into the world, have a transformative impact on a student's development. The skills and experiences 826CHI is giving to their students, is equipping them for success both inside and outside of the classroom."</blockquote>
+          <blockquote class='h2'>“Creative writing education is more than just teaching composition and storytelling, it's inspiring a student to find their voice. The internal reflection required to develop a personal story, and the self confidence needed to put it into the world, have a transformative impact on a student's development. The skills and experiences 826CHI is giving to their students, is equipping them for success both inside and outside of the classroom.”</blockquote>
           <cite  class='smallcaps'>– NATE, DONOR</cite>
         </div>
       </div>
@@ -1465,7 +1465,7 @@
     <footer>
       <div id='contact'>
         <img width='28px' id='footer-symbol' src='images/826-symbol.svg'>
-        <h2>CONTACT US<br>QUESTIONS? EMAIL <a href="mailto:info@826chi.org">INFO@826CHI.ORG</a></h2><!-- <br> -->
+        <h2>CONTACT US<br><a href="mailto:info@826chi.org">INFO@826CHI.ORG</a></h2><!-- <br> -->
         <!-- <p class='smallcaps'>QUESTIONS? <span>EMAIL <a href="mailto:info@826chi.org">INFO@826CHI.ORG</a></span></p> -->
       </div>
     </footer>
