Responsive image loading

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </a>
       </span>
       <div class='menu-list' onclick=''>
-        <button id='menu'><h2>CONTENTS</h2><img alt='' id='chevron' src='images/chevron.svg'><img alt='menu icon' id='menu-icon'src='images/icons/menu.svg'></button>
+        <button id='menu'><h2>CONTENTS</h2><img alt='' id='chevron' src='images/chevron.svg'><img alt='menu icon' id='menu-icon' src='images/icons/menu.svg'></button>
         <ol class='hide' id='menu-items'>
           <li><div><a href="#execletter"><h2>Letter by Director</h2></a></div></li>
           <li><div><a href="#current-staff"><h2>Current Staff</h2></a></div></li>
@@ -112,7 +112,7 @@
     <section id="mission-statement">
       <img alt='' src='images/mission-1.png' srcset='images/mission-1.png 232w, images/mission-1@2x.png 416w, images/mission-1@3x.png 696w'>
       <img alt='' src='images/mission-2.png' srcset='images/mission-2.png 203w, images/mission-2@2x.png 406w, images/mission-2@3x.png 609w'>
-      <img alt='' src='images/mission-3.png' src='images/mission-3.png 459w, images/mission-3@2x.png 918w, images/mission-3@3x.png 1377w'>           
+      <img alt='' src='images/mission-3.png' srcset='images/mission-3.png 459w, images/mission-3@2x.png 918w, images/mission-3@3x.png 1377w'>           
       <div id='mission' class='big-box'>
        	<h2 class="section-title">Mission Statement</h2>
        	<p>826CHI is a nonprofit organization dedicated to supporting students ages 6 to 18 with their creative and expository writing skills, and to helping teachers inspire their students to write. Our services are structured around the understanding that great leaps in learning can happen with one-on-one attention, and that strong writing skills are fundamental to future success. All of our programs are challenging and enjoyable, and ultimately strengthen each student’s power to express ideas effectively, creatively, confidently, and in their individual voice.</p>
@@ -1430,7 +1430,7 @@
     </div>
     <footer>
       <div id='contact'>
-        <img alt='826CHI symbol' width='28px' id='footer-symbol' src='images/826-symbol.svg'>
+        <img alt='826CHI symbol' width='28' id='footer-symbol' src='images/826-symbol.svg'>
         <h2>CONTACT US<br><a href="mailto:info@826chi.org">INFO@826CHI.ORG</a></h2>
       </div>
     </footer>    
