Replace staff .png images with .svg; add analytics code

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <div class='floated-pair'>
    			<p class='pair-left'>And while 826CHI was maturing, the city and country around us was thrust into crisis - from the Illinois state budget impasse and teacher layoffs to tragedies in Charleston, Orlando, and San Bernadino. With the loss of Laquan McDonald just blocks from long-time partner school Curie Metropolitan, our community reinforced the role of 826CHI’s mission at moments of adversity.</p>
         <div id='yerika' class='blockquote'>
-          <blockquote class='h2'>“I want allies to listen. I want marginalized students of color to see themselves in all creative arts. [&hellip;] Sharing is scary, but it also connects you with others. Don’t be afraid to erase and start over.”</blockquote>
-          <cite class='smallcaps'>– YERIKA, STUDENT</cite>
+          <blockquote class='h2'>“Each word is like an earthquake.”</blockquote>
+          <cite class='smallcaps'>– SIMONE W., GRADE 11, STUDENT</cite>
         </div>
         <p class='pair-left--mobile'>And while 826CHI was maturing, the city and country around us was thrust into crisis - from the Illinois state budget impasse and teacher layoffs to tragedies in Charleston, Orlando, and San Bernadino. With the loss of Laquan McDonald just blocks from long-time partner school Curie Metropolitan, our community reinforced the role of 826CHI’s mission at moments of adversity.</p>
       </div>
@@ -84,27 +84,27 @@
       <h3>—<br>Staff</h3>
       <ul>
         <li>
-          <div class='thumbnail-wrap'><img alt='' height='99' width='99' src='images/staff/staff-1.png'></div><h2>Kendra Curry-Khanna</h2><p class='smallcaps'>EXECUTIVE DIRECTOR</p></li>
+          <div class='thumbnail-wrap'><img alt='' height='99' width='99' src='images/staff/staff-1.svg'></div><h2>Kendra Curry-Khanna</h2><p class='smallcaps'>EXECUTIVE DIRECTOR</p></li>
         <li>
-          <div class='thumbnail-wrap'><img alt='' height='99' width='99' src='images/staff/staff-2.png'></div><h2>Kate Gonzalez</h2><p class='smallcaps'>STORE ASSOCIATE</p></li>
+          <div class='thumbnail-wrap'><img alt='' height='99' width='99' src='images/staff/staff-2.svg'></div><h2>Kate Gonzalez</h2><p class='smallcaps'>STORE ASSOCIATE</p></li>
         <li>
-          <div class='thumbnail-wrap'><img alt='' height='92' width='99' src='images/staff/staff-3.png'></div><h2>Mike Hernandez</h2><p class='smallcaps'>COMMUNICATIONS COORDINATOR</p></li>
+          <div class='thumbnail-wrap'><img alt='' height='92' width='99' src='images/staff/staff-3.svg'></div><h2>Mike Hernandez</h2><p class='smallcaps'>COMMUNICATIONS COORDINATOR</p></li>
         <li>
-          <div class='thumbnail-wrap'><img alt='' height='92' width='112' src='images/staff/staff-4.png'></div><h2>Abi Humber</h2><p class='smallcaps'>PUBLICATIONS MANAGER</p></li>
+          <div class='thumbnail-wrap'><img alt='' height='92' width='112' src='images/staff/staff-4.svg'></div><h2>Abi Humber</h2><p class='smallcaps'>PUBLICATIONS MANAGER</p></li>
         <li>
-          <div class='thumbnail-wrap'><img alt='' height='113' width='112' src='images/staff/staff-5.png'></div><h2>Marty Kezon</h2><p class='smallcaps'>VOLUNTEER COORDINATOR</p></li>
+          <div class='thumbnail-wrap'><img alt='' height='113' width='112' src='images/staff/staff-5.svg'></div><h2>Marty Kezon</h2><p class='smallcaps'>VOLUNTEER COORDINATOR</p></li>
         <li>
-          <div class='thumbnail-wrap'><img alt='' height='117' width='125' src='images/staff/staff-6.png'></div><h2>Sarah Kokernot</h2><p class='smallcaps'>PROGRAMS MANAGER</p></li>
+          <div class='thumbnail-wrap'><img alt='' height='117' width='125' src='images/staff/staff-6.svg'></div><h2>Sarah Kokernot</h2><p class='smallcaps'>PROGRAMS MANAGER</p></li>
         <li>
-          <div class='thumbnail-wrap'><img alt='' height='125' width='125' src='images/staff/staff-7.png'></div><h2>Esther Lee</h2><p class='smallcaps'>DEVELOPMENT ASSOCIATE</p></li>
+          <div class='thumbnail-wrap'><img alt='' height='125' width='125' src='images/staff/staff-7.svg'></div><h2>Esther Lee</h2><p class='smallcaps'>DEVELOPMENT ASSOCIATE</p></li>
         <li>
-          <div class='thumbnail-wrap'><img alt='' height='122' width='112' src='images/staff/staff-8.png'></div><h2>Tyler Stoltenberg</h2><p class='smallcaps'>OPERATIONS MANAGER</p></li>
+          <div class='thumbnail-wrap'><img alt='' height='122' width='112' src='images/staff/staff-8.svg'></div><h2>Tyler Stoltenberg</h2><p class='smallcaps'>OPERATIONS MANAGER</p></li>
         <li>
-          <div class='thumbnail-wrap'><img alt='' height='112' width='112' src='images/staff/staff-9.png'></div><h2>Stien van der Ploeg</h2><p class='smallcaps'>DIRECTOR OF DEVELOPMENT</p></li>
+          <div class='thumbnail-wrap'><img alt='' height='112' width='112' src='images/staff/staff-9.svg'></div><h2>Stien van der Ploeg</h2><p class='smallcaps'>DIRECTOR OF DEVELOPMENT</p></li>
         <li>
-          <div class='thumbnail-wrap'><img alt='' height='109' width='112' src='images/staff/staff-10.png'></div><h2>Maria Villarreal</h2><p class='smallcaps'>DIRECTOR OF PROGRAMS</p></li>
+          <div class='thumbnail-wrap'><img alt='' height='109' width='112' src='images/staff/staff-10.svg'></div><h2>Maria Villarreal</h2><p class='smallcaps'>DIRECTOR OF PROGRAMS</p></li>
         <li>
-          <div class='thumbnail-wrap'><img alt='' height='112' width='112' src='images/staff/staff-11.png'></div><h2>Tracy Woodley</h2><p class='smallcaps'>DEVELOPMENT COORDINATOR</p></li>
+          <div class='thumbnail-wrap'><img alt='' height='112' width='112' src='images/staff/staff-11.svg'></div><h2>Tracy Woodley</h2><p class='smallcaps'>DEVELOPMENT COORDINATOR</p></li>
       </ul>
     </section>
 
@@ -1452,5 +1452,12 @@
   <script type='text/javascript' src='js/html5shiv.min.js'></script>
   <script type="text/javascript" src='js/scrollspy.js'></script>
   <script type='text/javascript' src='js/custom.js'></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-18772773-1', 'auto');
+  ga('send', 'pageview');
+  </script>
   </body>
 </html>
