--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <img alt='' id='hp-grid-13' src='assets/hp-grid-13@2x.jpg'>
                 <img alt='' id='hp-grid-10' src='assets/hp-grid-10@2x.jpg'>
                 <img alt='' id='hp-grid-12' src='assets/hp-grid-12@2x.jpg'>
-                <div id='mission'>
-                        <img alt='' src='assets/mission@2x.png'>
-                        <a class='border-link copy--20--futura' href=''>read the letter from our executive director kendra</a>
-                </div>
+            </div>
+            <div id='mission' class='shrinkable'>
+                    <img alt='' src='assets/mission@2x.png'>
+                    <a class='border-link copy--20--futura' href=''>read the letter from our executive director kendra</a>
             </div>
             <h5 class='copy--20--bebas'>SOME HIGHLIGHTS FROM OUR YEAR</h5>
             <div class='stats'>
