--- a/programs.html
+++ b/programs.html
@@ -45,12 +45,26 @@
             	</div>
                 <div class='programs__program__body'>
                 	<img alt='' src='assets/img-afterschooltutoring@2x.jpg'>
+                    <div class='number-items-boxes--mobile'>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>125</div>
+                            <div class='copy--20--futura'>sessions</div>
+                        </div>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>48</div>
+                            <div class='copy--20--futura'>students</div>
+                        </div>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>21</div>
+                            <div class='copy--20--futura'>schools</div>
+                        </div>
+                    </div>
                 	<p class='copy--16--bookmania'>From September to June, afternoons at our writing center are filled with students prepared to dive into writing prompts, finish their homework, and do some hula-hooping as a reward. Our faithful cohort of tutors are always on hand to help students with math homework and help them revise their writing. We launched the second year of our Speakers and Snacks program, where guests attend 45-minute Q&amp;A session from our students about their professions. Speakers this year included a sports commentator, professor and dog trainer. This year ASTW published two chapbooks and one audio project, all of which had individual community readings. For the final chapbook release, we were thrilled to integrate physical movement into the students’ readings, courtesy of a partnership with the Dancers Awareness project (DAP).</p>
                 </div>
-                	<blockquote class='text--green w557'>
-                		<p class='copy--20--futura text--green'>“826 provides my children exposure to a different demographic where they meet new friends (and get to socialize also) from different backgrounds and practice writing skills in a fun way.”</p>
-                		<cite>– Theresa, After School Tutoring &amp; Writing parent</cite>
-                	</blockquote>
+                <blockquote class='text--green w557'>
+                	<p class='copy--20--futura text--green'>“826 provides my children exposure to a different demographic where they meet new friends (and get to socialize also) from different backgrounds and practice writing skills in a fun way.”</p>
+                	<cite>– Theresa, After School Tutoring &amp; Writing parent</cite>
+                </blockquote>
             </section>
             <section class='programs__program' id='fieldtrips'>
             	<img alt='' class='programs__program__title shrinkable' src='assets/fieldtrips@2x.png'>
@@ -71,6 +85,20 @@
 	            </div>
                 <div class='programs__program__body'>
                 	<img alt='' src='assets/img-fieldtrips@2x.jpg'>
+                    <div class='number-items-boxes--mobile'>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>125</div>
+                            <div class='copy--20--futura'>sessions</div>
+                        </div>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>48</div>
+                            <div class='copy--20--futura'>students</div>
+                        </div>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>21</div>
+                            <div class='copy--20--futura'>schools</div>
+                        </div>
+                    </div>
                 	<p class='copy--16--bookmania'>During the school year, mornings at 826CHI are boisterous with visiting classrooms eager to create their own books. Our Field Trips expose students to the endless possibilities of creative writing, all while providing teachers with resources to bring our innovative pedagogy back to the classroom. Each Field Trip focuses on plot, character development, and writing with details. In 2016-2017 we welcomed nearly 80 classes of students from 1st through 12th grade. We offered three unique Field Trips: Storytelling &amp; Bookmaking, Images &amp; Imagination, and Memoir Writing each focused on building plot and rich description within a story. Storytelling &amp; Bookmaking remains our most popular field trip, with students taking home their very own bound books. Some choice titles from our trips this year were Mr. Monkey and His Dance Problem, The Adventures of Cheese Dude and Gramburger and I Remember...The Big Cannonball Splash.</p>
                 </div>
                 	<blockquote class='text--green w557'>
@@ -97,6 +125,20 @@
 	            </div>
                 <div class='programs__program__body'>
                 	<img alt='' src='assets/img-workshops@2x.jpg'>
+                    <div class='number-items-boxes--mobile'>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>125</div>
+                            <div class='copy--20--futura'>sessions</div>
+                        </div>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>48</div>
+                            <div class='copy--20--futura'>students</div>
+                        </div>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>21</div>
+                            <div class='copy--20--futura'>schools</div>
+                        </div>
+                    </div>
                 	<p class='copy--16--bookmania'>Coding, podcast-making and playwriting only skim the surface of our workshops. Each semester, dozens of 826CHI volunteers propose and teach workshops to 1-12th graders that go beyond the typical English class. Workshops explores the intersections of writing with other disciplines, teaching students that crafting compelling narratives is an essential element for future success in any field.  826CHI staff and volunteers led 22 workshops in 2016-2017. Highlights of the year include a cross-generational poetry workshop led by 826CHI staff and the UChicago Writers’ Studio.</p>
                 </div>
                 	<blockquote class='text--green w557'>
@@ -123,6 +165,20 @@
 	            </div>
                 <div class='programs__program__body'>
                 	<img alt='' src='assets/img-inschools@2x.jpg'>
+                    <div class='number-items-boxes--mobile'>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>125</div>
+                            <div class='copy--20--futura'>sessions</div>
+                        </div>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>48</div>
+                            <div class='copy--20--futura'>students</div>
+                        </div>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>21</div>
+                            <div class='copy--20--futura'>schools</div>
+                        </div>
+                    </div>
                 	<p class='copy--16--bookmania'>Every year 826CHI partners with local schools to provide classrooms with individualized, in-depth attention. Program staff work with classroom teachers to create curriculum that inspires, challenges and engages students. In 2016-2017 826CHI worked with four public schools. We facilitated a memoir-writing project at Prieto Elementary and continued our Digital Tutoring program at A.N. Pritzker School. Students from the other two schools—Emiliano Zapata Elementary and Roald Amundsen High School—maintained a year-long letter correspondence. These letters are documented in our Young Authors Book Project for the year, PS: You Sound Like Someone I Can Trust. A public reading in June gave students the chance to meet their letter-writing partners in person, for the very first time.</p>
                 </div>
                 	<blockquote class='text--green w557'>
@@ -149,6 +205,20 @@
 	            </div>
                 <div class='programs__program__body'>
                 	<img alt='' src='assets/img-publishing@2x.jpg'>
+                    <div class='number-items-boxes--mobile'>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>125</div>
+                            <div class='copy--20--futura'>sessions</div>
+                        </div>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>48</div>
+                            <div class='copy--20--futura'>students</div>
+                        </div>
+                        <div class='number-items-box'>
+                            <div class='copy--big--numbers'>21</div>
+                            <div class='copy--20--futura'>schools</div>
+                        </div>
+                    </div>
                 	<p class='copy--16--bookmania'>Publishing is a core tenet of all our programs—we teach students ages 6 to 18 invaluable writing skills while boosting their sense of self-efficacy through publication.  By publishing our young authors’ work, we aim to foster confidence levels, determination, and the perceived ability to succeed in other areas of life. The rate at which 826CHI publishes student writing remains unmatched. This year we printed 40% more publications than last year. That means 40% more binding, stapling, copyediting, designing, hair-wringing and ultimately, pride for our students! We couldn’t have done it without the help of our Design Cohort and our brand-new Editing Cohort. The larger world is also noticing our students’ stories. P.S. You Sound Like Someone I Can Trust received local and national press coverage. And Compendium, Volume 5 won a whopping 4 Awards from PubWest and National Indie Excellence Book Awards!</p>
                 </div>
                 	<blockquote class='text--green w557'>
