--- a/index.html
+++ b/index.html
@@ -23,19 +23,14 @@
 
         <main>
             <div id='hp-grid__wrap'>
-                <img alt='' id='hp-grid-1' src='assets/hp-grid-1@2x.jpg'>
-                <img alt='' id='hp-grid-2' src='assets/hp-grid-2@2x.jpg'>
-                <img alt='' id='hp-grid-3' src='assets/hp-grid-3@2x.jpg'>
-                <img alt='' id='hp-grid-4' src='assets/hp-grid-4@2x.jpg'>
-                <img alt='' id='hp-grid-5' src='assets/hp-grid-5@2x.jpg'>
-                <img alt='' id='hp-grid-8' src='assets/hp-grid-8@2x.jpg'>
-                <img alt='' id='hp-grid-9' src='assets/hp-grid-9@2x.jpg'>
-                <img alt='' id='hp-grid-6' src='assets/hp-grid-6@2x.jpg'>
-                <img alt='' id='hp-grid-7' src='assets/hp-grid-7@2x.jpg'>
-                <img alt='' id='hp-grid-11' src='assets/hp-grid-11@2x.jpg'>
-                <img alt='' id='hp-grid-13' src='assets/hp-grid-13@2x.jpg'>
-                <img alt='' id='hp-grid-10' src='assets/hp-grid-10@2x.jpg'>
-                <img alt='' id='hp-grid-12' src='assets/hp-grid-12@2x.jpg'>
+                <img alt='' id='hp-grid-1' src='assets/hpimg-1@2x.jpg'>
+                <img alt='' id='hp-grid-2' src='assets/hpimg-2@2x.jpg'>
+                <img alt='' id='hp-grid-3' src='assets/hpimg-3@2x.jpg'>
+                <img alt='' id='hp-grid-4' src='assets/hpimg-4@2x.jpg'>
+                <img alt='' id='hp-grid-5' src='assets/hpimg-5@2x.jpg'>
+                <img alt='' id='hp-grid-6' src='assets/hpimg-6@2x.jpg'>
+                <img alt='' id='hp-grid-7' src='assets/hpimg-7@2x.jpg'>
+                <img alt='' id='hp-grid-8' src='assets/hpimg-8@2x.jpg'>
             </div>
             <div id='mission' class='shrinkable'>
                     <img alt='' src='assets/mission@2x.png'>
@@ -132,6 +127,6 @@
         <script src="js/main.js"></script>
 
         <!-- Google Analytics -->
-        
+
     </body>
 </html>
