finished letter page, fixed page footers

--- a/partners.html
+++ b/partners.html
@@ -251,7 +251,7 @@
                 <a class='nav__links' id='nav__link__partners' href='partners.html'></a>
                 <a class='nav__links' id='nav__link__our-supporters' href='supporters.html'></a>
             </nav>
-            <p>thanks, and see you next year!</p>
+            <p class='copy--20--futura'>thanks, and see you next year!</p>
             <div class='link-row'>
                 <div class='link-row__box'>
                     <a class='border-link copy--20--bebas' href='#' target='_blank'>INFO@826CHI.ORG</a>
@@ -263,8 +263,8 @@
                     <a class='border-link copy--20--bebas' href='#' target='_blank'>VOLUNTEER</a>
                 </div>
             </div>
-            <a id='_826link-2' href='#' target='_blank'></a>
-            <p>copyright 2017</p>
+            <a id='_826link-2' href='index.html' target='_blank'></a>
+            <p class='copy--20--futura' id='copyright'>copyright 2017</p>
         </footer>
 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
