--- a/supporters.html
+++ b/supporters.html
@@ -918,16 +918,16 @@
             <section class='list-section' id='in-kind'>
                 <h2>IN-KIND</h2>
                 <ul>
-                    <li>In-kind</li> 
-                    <li>Busy Beaver Button Co.</li> 
-                    <li>Cards Against Humanity</li>   
-                    <li>Chipotle</li>    
-                    <li>Elda Diaz</li> 
+                    <li>In-kind</li>
+                    <li>Busy Beaver Button Co.</li>
+                    <li>Cards Against Humanity</li>
+                    <li>Chipotle</li>
+                    <li>Elda Diaz</li>
                     <li>Carmen Gomez</li>
                     <li>kCura</li>
-                    <li>Local Foods</li>      
+                    <li>Local Foods</li>
                     <li>Mark Anthony Brewing</li>
-                    <li>Evelyn Montes de Oca</li>     
+                    <li>Evelyn Montes de Oca</li>
                     <li>WeWork Kinzie</li>
                 </ul>
             </section>
@@ -944,7 +944,7 @@
                 <a class='nav__links' id='nav__link__partners' href='partners.html'></a>
                 <a class='nav__links' id='nav__link__our-supporters' href='supporters.html'></a>
             </nav>
-            <p>thanks, and see you next year!</p>
+            <p class='copy--20--futura'>thanks, and see you next year!</p>
             <div class='link-row'>
                 <div class='link-row__box'>
                     <a class='border-link copy--20--bebas' href='#' target='_blank'>INFO@826CHI.ORG</a>
@@ -956,8 +956,8 @@
                     <a class='border-link copy--20--bebas' href='#' target='_blank'>VOLUNTEER</a>
                 </div>
             </div>
-            <a id='_826link-2' href='#' target='_blank'></a>
-            <p>copyright 2017</p>
+            <a id='_826link-2' href='index.html' target='_blank'></a>
+            <p class='copy--20--futura' id='copyright'>copyright 2017</p>
         </footer>
 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
@@ -965,6 +965,6 @@
         <script src="js/main.js"></script>
 
         <!-- Google Analytics -->
-        
+
     </body>
 </html>
