finish round 1 of style, update images

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
         <main>
             <div id='hp-grid__wrap'>
-                <img alt='' id='hp-grid-1' src='assets/hpimg-1@2x.jpg'>
-                <img alt='' id='hp-grid-2' src='assets/hpimg-2@2x.jpg'>
-                <img alt='' id='hp-grid-3' src='assets/hpimg-3@2x.jpg'>
-                <img alt='' id='hp-grid-4' src='assets/hpimg-4@2x.jpg'>
-                <img alt='' id='hp-grid-5' src='assets/hpimg-5@2x.jpg'>
-                <img alt='' id='hp-grid-6' src='assets/hpimg-6@2x.jpg'>
-                <img alt='' id='hp-grid-7' src='assets/hpimg-7@2x.jpg'>
-                <img alt='' id='hp-grid-8' src='assets/hpimg-8@2x.jpg'>
+                <img alt='' id='hp-grid-1' src='assets/hpimg-1@2x.png'>
+                <img alt='' id='hp-grid-2' src='assets/hpimg-2@2x.png'>
+                <img alt='' id='hp-grid-3' src='assets/hpimg-3@2x.png'>
+                <img alt='' id='hp-grid-4' src='assets/hpimg-4@2x.png'>
+                <img alt='' id='hp-grid-5' src='assets/hpimg-5@2x.png'>
+                <img alt='' id='hp-grid-6' src='assets/hpimg-6@2x.png'>
+                <img alt='' id='hp-grid-7' src='assets/hpimg-7@2x.png'>
+                <img alt='' id='hp-grid-8' src='assets/hpimg-8@2x.png'>
             </div>
             <div id='mission' class='shrinkable'>
                     <img alt='' src='assets/mission@2x.png'>
