--- a/partners.html
+++ b/partners.html
@@ -37,6 +37,7 @@
             </section>
 
             <section class='list-section' id='community-partners'>
+              <div>
                 <h2>COMMUNITY<br>PARTNERS</h2>
                 <ul>
                     <li>57th Street Books</li>
@@ -115,6 +116,7 @@
                     <li>Young Chicago Authors</li>
                     <li>Zinefest</li>
                 </ul>
+              </div>
             </section>
 
             <section class='list-section' id='school-partners'>
@@ -272,6 +274,6 @@
         <script src="js/main.js"></script>
 
         <!-- Google Analytics -->
-        
+
     </body>
 </html>
