--- a/students.html
+++ b/students.html
@@ -25,7 +25,12 @@
             <img alt='' class='shrinkable' id='title__students' src='assets/students@2x.png'>
             <p class='copy--20--futura w651'>High concentrations of schools and students served by 826CHI are in the West Town, Irving Park, Archer Heights, and Lower West Side neighborhoods.</p>
             <img alt='' class='shrinkable' id='map' src='assets/map@2x.png'>
-            <div id='key'><p class='copy--20--futura'>key</p><i id='icon-star'></i><h6>20+ STUDENTS</h6><i id='icon-face'></i><h6>20- STUDENTS</h6><i id='icon-dot'></i><h6>10- STUDENTS</h6></div>
+            <div id='key'>
+              <p class='copy--20--futura'>key</p>
+              <div class='key__item'><i id='icon-star'></i><h6>20+ STUDENTS</h6></div>
+              <div class='key__item'><i id='icon-face'></i><h6>20- STUDENTS</h6></div>
+              <div class='key__item'><i id='icon-dot'></i><h6>10- STUDENTS</h6></div>
+            </div>
 
             <section id='race'>
                 <h2>RACE</h2>
@@ -120,6 +125,6 @@
         <script src="js/main.js"></script>
 
         <!-- Google Analytics -->
-        
+
     </body>
 </html>
