--- a/letter.html
+++ b/letter.html
@@ -23,7 +23,7 @@
 
         <main>
             <img alt='' id='letter-from-kendra' src='assets/letterfromkendra@2x.png'>
-            <img alt='' id='letter-from-kendra-img' src='assets/img-letter@2x.jpg' srcset='assets/img-letter.jpg 689w assets/img-letter@2x.jpg 1378w assets/img-letter@3x.jpg 2067w'>
+            <img alt='' id='letter-from-kendra-img' src='assets/img-letter@2x.png' srcset='assets/img-letter.jpg 689w assets/img-letter@2x.jpg 1378w assets/img-letter@3x.jpg 2067w'>
 
             <h5 class='copy--20--bebas shrinkable'>LAST YEAR, WE PLANNED. THIS YEAR, WE EXECUTED.</h5>
             <div class='w666'>
@@ -73,6 +73,6 @@
         <script src="js/main.js"></script>
 
         <!-- Google Analytics -->
-        
+
     </body>
 </html>
