--- a/team.html
+++ b/team.html
@@ -25,62 +25,62 @@
             <img alt='' class='shrinkable' id='title__team' src='assets/ourteam@2x.png'>
             <div id='team-members'>
                 <div class='team-members__member'>
-                    <img alt='' src='assets/sankhya@2x.jpg'>
+                    <img alt='' src='assets/sankhya@2x.png'>
                     <span class='copy--20--bebas'>SANKHYA AMARVADI</span><br>
                     <span class='copy--16--bookmania'>Data Coordinator</span>
                 </div>
                 <div class='team-members__member'>
-                    <img alt='' src='assets/kendra@2x.jpg'>
+                    <img alt='' src='assets/kendra@2x.png'>
                     <span class='copy--20--bebas'>KENDRA CHURRY-KHANNA</span><br>
                     <span class='copy--16--bookmania'>Executive Director</span>
                 </div>
                 <div class='team-members__member'>
-                    <img alt='' src='assets/ola@2x.jpg'>
+                    <img alt='' src='assets/ola@2x.png'>
                     <span class='copy--20--bebas'>OLA FALETI</span><br>
                     <span class='copy--16--bookmania'>Development Coordinator</span>
                 </div>
                 <div class='team-members__member'>
-                    <img alt='' src='assets/gaby@2x.jpg'>
+                    <img alt='' src='assets/gaby@2x.png'>
                     <span class='copy--20--bebas'>GABY FEBLAND</span><br>
                     <span class='copy--16--bookmania'>Creative Retail Coordinator</span>
                 </div>
                 <div class='team-members__member'>
-                    <img alt='' src='assets/melissa@2x.jpg'>
+                    <img alt='' src='assets/melissa@2x.png'>
                     <span class='copy--20--bebas'>MELISSA KIRK</span><br>
                     <span class='copy--16--bookmania'>Volunteer Coordinator</span>
                 </div>
                 <div class='team-members__member'>
-                    <img alt='' src='assets/sarah@2x.jpg'>
+                    <img alt='' src='assets/sarah@2x.png'>
                     <span class='copy--20--bebas'>SARAH KOKERNOT</span><br>
                     <span class='copy--16--bookmania'>Program Coordinator</span>
                 </div>
                 <div class='team-members__member'>
-                    <img alt='' src='assets/david@2x.jpg'>
+                    <img alt='' src='assets/david@2x.png'>
                     <span class='copy--20--bebas'>DAVID PINTOR</span><br>
                     <span class='copy--16--bookmania'>Volunteer Manager</span>
                 </div>
                 <div class='team-members__member'>
-                    <img alt='' src='assets/jane@2x.jpg'>
+                    <img alt='' src='assets/jane@2x.png'>
                     <span class='copy--20--bebas'>JANE SERENSKA</span><br>
                     <span class='copy--16--bookmania'>Communications Coordinator</span>
                 </div>
                 <div class='team-members__member'>
-                    <img alt='' src='assets/molly@2x.jpg'>
+                    <img alt='' src='assets/molly@2x.png'>
                     <span class='copy--20--bebas'>MOLLY SPRAYREGEN</span><br>
                     <span class='copy--16--bookmania'>Program Coordinator</span>
                 </div>
                 <div class='team-members__member'>
-                    <img alt='' src='assets/tyler@2x.jpg'>
+                    <img alt='' src='assets/tyler@2x.png'>
                     <span class='copy--20--bebas'>TYLER STOLTENBERG</span><br>
                     <span class='copy--16--bookmania'>Operations Manager</span>
                 </div>
                 <div class='team-members__member'>
-                    <img alt='' src='assets/stein@2x.jpg'>
+                    <img alt='' src='assets/stein@2x.png'>
                     <span class='copy--20--bebas'>STEIN VAN DER PLOEG</span><br>
                     <span class='copy--16--bookmania'>Director of Development</span>
                 </div>
                 <div class='team-members__member'>
-                    <img alt='' src='assets/maria@2x.jpg'>
+                    <img alt='' src='assets/maria@2x.png'>
                     <span class='copy--20--bebas'>MARIA VILLARREAL</span><br>
                     <span class='copy--16--bookmania'>Director of Programs</span>
                 </div>
@@ -161,17 +161,17 @@
                         <li>Adel Johnson</li>
                         <li>Kristopher Knabe (Emeritus)</li>
                         <li>Ashley Kolpak (Emeritus)</li>
-                        <li>Melanie Krakauer</li> 
+                        <li>Melanie Krakauer</li>
                         <li>Rosemary Lane</li>
                         <li>Ian Law</li>
                         <li>Jeffrey Levine</li>
                     <div class='col-2'>
                         <li>Evan Marshall</li>
-                        <li>Liz McKeon</li> 
+                        <li>Liz McKeon</li>
                         <li>Laura Mittelstaedt</li>
                         <li>Jessica Mlinaric</li>
                         <li>Sam Mock</li>
-                        <li>Natalie Salim</li> 
+                        <li>Natalie Salim</li>
                         <li>Heidi Schmid Whiting (Emeritus)</li>
                         <li>Kate Schriner</li>
                         <li>Matt Sudman</li>
@@ -260,6 +260,6 @@
         <script src="js/main.js"></script>
 
         <!-- Google Analytics -->
-        
+
     </body>
 </html>
