round two first commit

--- a/letter.html
+++ b/letter.html
@@ -23,7 +23,7 @@
 
         <main>
             <img alt='' id='letter-from-kendra' src='assets/letterfromkendra@2x.png'>
-            <img alt='' id='letter-from-kendra-img' src='assets/img-letter@2x.png' srcset='assets/img-letter.jpg 689w assets/img-letter@2x.jpg 1378w assets/img-letter@3x.jpg 2067w'>
+            <img alt='' id='letter-from-kendra-img' src='assets/img-letter@2x.png' srcset='assets/img-letter.jpg 689w, assets/img-letter@2x.jpg 1378w, assets/img-letter@3x.jpg 2067w'>
 
             <h5 class='copy--20--bebas shrinkable'>LAST YEAR, WE PLANNED. THIS YEAR, WE EXECUTED.</h5>
             <div class='w666'>
@@ -67,12 +67,5 @@
             <a id='_826link-2' href='index.html' target='_blank'></a>
             <p class='copy--20--futura'>copyright 2017</p>
         </footer>
-
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-        <script>window.jQuery || document.write('<script src="js/jquery-3.2.1.min.js"><\/script>')</script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics -->
-
     </body>
 </html>
